--- a/docs/concepts/durable-promise.mdx
+++ b/docs/concepts/durable-promise.mdx
@@ -90,7 +90,8 @@ It also serves use cases where there is a requirement of very low latency on sin
 
 Part 1 of the quickstart tutorials showcases this functionality:
 
-- [TypeScript SDK quickstart Part 1](/get-started/typescript-quickstart/part-1)
+- [Python SDK quickstart - Part 1 Incremental adoption](/get-started/python-quickstart#part-1-incremental-adoption)
+- [TypeScript SDK quickstart - Part 1 Incremental adoption](/get-started/typescript-quickstart#part-1-incremental-adoption)
 
 ### Remote storage
 
@@ -154,7 +155,8 @@ It also enables the Call Graph to recover on a completely different Application 
 
 Part 2 of the quickstart tutorials showcases this functionality:
 
-- [TypeScript SDK quickstart Part 2](/get-started/typescript-quickstart/part-2)
+- [Python SDK quickstart - Part 2 Durable Execution](/get-started/python-quickstart#part-2-crash-recovery)
+- [TypeScript SDK quickstart - Part 2 Durable Execution](/get-started/typescript-quickstart#part-2-crash-recovery)
 
 Now let's look at the distribution aspect that is enabled by Remote storage.
 
