--- a/docs/evaluate/features/recovery.mdx
+++ b/docs/evaluate/features/recovery.mdx
@@ -1,15 +1,40 @@
 ---
 id: recovery
-title: Call Graph recovery
-sidebar_label: Call Graph recovery
-sidebar_position: 3
+title: Crash failure recovery
+sidebar_label: Recovery
+sidebar_position: 2
 description: Learn how Resonate helps your applications recover from failure.
 last_update:
-  date: "10-02-2024"
+  date: "12-05-2024"
 tags:
   - why-resonate
   - features
 ---
+
+**Crash failure recovery** is the ability for an application to seamlessly continue its workflows after an **Application Node** crashes.
+This is also known as **Durable Execution**.
+This feature is critical in distributed systems where disruptions can halt operations or lead to unintended consequences.
+
+When an **Application Node** crashes mid-flow, it creates several challenges:
+
+- The node must be restarted, often requiring a supervisor to detect the crash and handle the recovery process.
+- Flows may have already initiated **side effects** (e.g., database writes or API calls), which must not be duplicated if they have irreversible consequences.
+- In multi-node environments, reassigning the execution to another node introduces additional complexity.
+
+**Resonate** addresses these challenges with built-in crash recovery mechanisms. Imagine a flow involving a series of steps:
+
+```jsx
+fn () {
+    await step1(); // Creates a side effect
+    await step2(); // Application Node crashes mid-step
+    await step3();
+}
+```
+
+- For single-node setups, Resonate restarts the function execution automatically as soon as the process is back online.
+- For multi-node environments, Resonate can reassign the execution to another **Application Node**, ensuring the flow resumes seamlessly without duplicating the side effect from step 1.
+
+This process is made reliable by **Resonate’s Durable Promises**, which guarantee that side effects are not duplicated unless explicitly allowed. Developers can focus on application logic, knowing that Resonate handles recovery and consistency behind the scenes.
 
 When you use Resonate to build applications, each [Application Node](/concepts/application-node) in the [Call Graph](/concepts/call-graph) benefits from the ability to recover after a process crash.
 
