--- a/docs/evaluate/system-architecture.mdx
+++ b/docs/evaluate/system-architecture.mdx
@@ -2,7 +2,7 @@
 id: system-architecture
 title: Resonate system architecture
 sidebar_label: System architecture
-sidebar_position: 2
+sidebar_position: 7
 last_update:
   date: "10-02-2024"
 tags:
@@ -15,11 +15,31 @@ The following diagram illustrates the system architecture of Resonate:
 
 ![Resonate system architecture](/img/resonate-architecture.svg)
 
+### Resonate SDK
+
 Developers use the Resonate SDK to build applications.
-Each process where the Resonate SDK is used to call `resonate.run()` is called an [Application Node](/concepts/application-node).
+It enables developers to write sequential programs using just functions and promises that execute asynchronously across multiple processes or machines.
+
+Each process where the Resonate SDK is used to call `resonate.run()` is known as an [Application Node](/concepts/application-node).
 A Resonate application can have between 1 and n Application Nodes.
 The Application Nodes are responsible for executing functions.
 
+Resonate offers SDKs for the following langauges:
+
+- [Python](/develop/python)
+- [TypeScript](/develop/typescript)
+
+### Resonate Server
+
 Each Application Node connects to a Resonate Server.
-the Resonate Server acts as supervisor, monitoring the status on function executions of Application Nodes.
-The Resonate Server also manages the storage of Durable Promises, which can be awaited on by functions across Application Nodes, effectively providing Distributed Async Await.
+The Resonate Server is a superivisor service that manages the storage of [Durable Promises](/concepts/durable-promise) and routes Remote Function Calls (RFIs).
+
+[Install the Resonate Server](/get-started/server-quickstart) and connect your Application Nodes to make promises durable.
+
+### Resonate CLI
+
+The Resonate CLI is a command-line interface that allows you to interact with the Resonate Server.
+
+It comes with the Resonate Server.
+
+Review the [Resonate CLI reference](/operate/cli-reference) for more information.
